# NP-2-ai-based-threat-detection-app-using-streamlit

./: README.md  classification_report.json  data_preprocessing.py  data_preprocessing2.py  logger.py  pyproject.toml  threat_scorer.py  xdetect_app.py  y_test.npy
app/templetes/: index.html
