[project]
name = "np^2-threat-detection-project"
version = "0.1.0"
description = "this project is about predicting the threats through ip"
authors = [
    {name = "Nandhan"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
